# bench

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  bench.py  pyproject.toml
.github/workflows/: CI.yml
notebooks/: bench.ipynb
python/topk_bench/: __init__.py  topk_bench.pyi
python/topk_bench/providers/: milvus.py  pinecone.py  qdrant.py  topk.py  turbopuffer.py
src/: lib.rs  provider.rs  s3.rs
src/data/: doc.rs  mod.rs  query.rs
src/ingest/: config.rs  mod.rs
src/query/: config.rs  mod.rs  recall.rs
src/telemetry/: metrics.rs  mod.rs  persist.rs  snapshot.rs
