[package]
name = "topk-bench"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "topk_bench"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
arrow = "57.0.0"
arrow-array = "57.0.0"
arrow-schema = "57.0.0"
async-channel = "2.5.0"
aws-config = "1.8.10"
aws-sdk-s3 = { version = "1.112.0", features = ["behavior-version-latest"] }
chrono = "0.4.42"
colored = "3.0.0"
config = "0.15.19"
hdrhistogram = "7.5.4"
once_cell = "1.21.3"
parquet = "57.0.0"
prost = "0.14.1"
pyo3 = "0.23.3"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4"] }
